name:                mine-sweeper
version:             0.1.0.0
synopsis:            Command-line mine sweeper game
homepage:            https://github.com/jn1118/CSE-230-Final-Project
license:             MIT
license-file:        LICENSE
author:              
maintainer:          
copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sudoku-tui
  hs-source-dirs:      src
  other-modules:       Game
                     , UI
                     , FileIO
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fforce-recomp
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , directory
                     , microlens
                     , split
                     , vty
